package games.tetrisBattle;

import java.util.List;

public class Block {
	
	private List<Square> squares;
	
	public Block() {
		
	}

}
