package games.tetrisBattle;

import java.util.List;

public class Multimino {
	
	private List<Block> blocks;
	
	public Multimino() {
		
	}

}
