package games.tetrisBattle;

import java.util.List;

public class Player {
	
	private Tetris tetris;
	private int axisX;
	private int axisY;
	private int score;
	private int mana;
	private List<Spell> spells;
	
	public Player() {
		
	}

}
