package games.tetrisBattle;

import java.util.List;

public class Tetris {
	
	private List<Multimino> multiminos;
	private List<List<Block>> squares;
	private List<Multimino> nextMultiminos;
	
	public Tetris() {
		
	}

}
