@startuml

class World {
  List<Player> player
}

class Player{
  Tetris tetris
  int axisX
  int axisY
  int score
  int mana
}

class Tetris {
  List<Multimino> multiminos
  List<List<Block>> blocks
  List<Multimino> nextBlocks
}

class Multimino{
  List<Block> blocks
  void translate()
  void rotate()
}

class Block{
  Multimino multimino
  List<Block> neighbors
}


Multimino "1" -- "*" Block
Tetris -- "*" Multimino
Tetris -- "*" Block
Block -- "*" Block
World - "2" Player
Player - "1" Tetris

@enduml
